fix panda cub image, adjust button spacing

--- a/css/crane.css
+++ b/css/crane.css
@@ -1,11 +1,3 @@
-@font-face {
-    font-family: 'Kung Fu Panda';
-    src: url('KungFuPanda.woff2') format('woff2'),
-        url('KungFuPanda.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
 
 h1 {
     color: #CD113B
@@ -24,7 +16,7 @@ h1 {
   }
 
 body {
-    font-family: 'Kung Fu Panda';
+    font-family: 'fantasy';
     background-color: #FFA900;
     text-align: center;
 }
